2002-10-08  Chris Blumenberg  <cblu@apple.com>

	Moved assumption that a resource without a content type or extension is HTML to WebFoundation.

        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient handle:didReceiveResponse:]):

2002-10-08  Chris Blumenberg  <cblu@apple.com>

	Minor plug-in code clean-up.

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView sendActivateEvent:]):
        (-[WebBaseNetscapePluginView sendUpdateEvent]):
        (-[WebBaseNetscapePluginView loadRequest:inTarget:withNotifyData:]):
        * Plugins.subproj/WebPluginStream.m:
        (-[WebNetscapePluginStream receivedData:]):

2002-10-08  Chris Blumenberg  <cblu@apple.com>

	Partial fix for 2967073 - should open all TEXT type files, at least

        * WebView.subproj/WebControllerPrivate.m:
        (+[WebController _MIMETypeForFile:]): Sniff for HTML in the fail case.

2002-10-07  Darin Adler  <darin@apple.com>

	WebKit part of implementation of multipart forms posting.

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge postWithURL:referrer:data:contentType:]):
	Add a contentType parameter to match change in WebCore API.
	Put the contentType value into the request.

2002-10-07  Chris Blumenberg  <cblu@apple.com>

	Icing fix for: 3063517 - crash loading .png in separate window
	
        * Plugins.subproj/WebPluginDatabase.m:
        (-[WebNetscapePluginDatabase init]): Don't override document view and rep
	types for types that have already been registered. 

2002-10-07  Darin Adler  <darin@apple.com>

	WebKit part of the page up/down fix.

        * WebView.subproj/WebHTMLViewPrivate.m: (-[WebHTMLView scrollPoint:]):
	If we are called from the handling of a page up or page down keyboard
	event, then ignore the specific scrolling requested, and do our idea of
	page up and page down. This guarantees that we will get the smarter
	idea of how to page from WebView instead of the one that's hardcoded